# pmi_2013_1_ex3_dil

./: README.md
sourcetree/: CMakeLists.txt  dil.cu  main.cpp
sourcetree/headers/: dil.h  simple_arrays.h  simple_arrays_adesso.h
